Support Minecraft 26.1 and Fabric